# spider

./: .Xauthority  .bash_history  .bashrc  .gitconfig  .profile  .wget-hsts  .xsession-errors  .xsession-errors.old  README.md  script.py  test_servos.py
.cache/fontconfig/: 0bd3dc0958fa2205aaaa8ebb13e2872b-le64.cache-9  188ac73a183f12857f63bb60a4a6d603-le64.cache-9  32b6488e5b8292a2e95c79d947e009e8-le64.cache-9  3830d5c3ddfd5cd38a049b759396e72e-le64.cache-9  3f7329c5293ffd510edef78f73874cfd-le64.cache-9  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-9  573ec803664ed168555e0e8b6d0f0c7f-le64.cache-8  573ec803664ed168555e0e8b6d0f0c7f-le64.cache-9  57e423e26b20ab21d0f2f29c145174c3-le64.cache-9  6094a5c04f012139332b91623dbcb43d-le64.cache-9  62f91419b9ebdb6975e7e41ab6412357-le64.cache-9  6333f38776742d18e214673cd2c24e34-le64.cache-9  6cc790b63b123a6a96ee260fcdad32a9-le64.cache-9  707971e003b4ae6c8121c3a920e507f5-le64.cache-9  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-9  95530828ff6c81d309f8258d8d02a23e-le64.cache-9  9d2451b1fd30e5bffe8383fd27c35478-le64.cache-9  a4e60e8d1e10d2fdff3fe3037a1845fb-le64.cache-9  c3bb64600bf7a4aa73b55dc8bb82b27b-le64.cache-9  c855463f699352c367813e37f3f70ea7-le64.cache-9  d0972c3d32f097851eb916381fc38920-le64.cache-8  (+9 more)
.config/: mimeapps.list
.config/dconf/: user
.vnc/: private.key
.vscode-server/: .1a5daa3a0231a0fbba4f14db7ec463cf99d7768e.token  .695af097c7bd098fbf017ce3ac85e09bbc5dda06.token
Desktop/: standup.py  tekst.txt  test_servos.py
Documents/spider/spider/: pyproject.toml
Documents/spider/spider/src/spider/: controller.py
(+6666 files in other folders)
