[tool.poetry]
name = "spider"
version = "0.1.0"
description = ""
authors = ["Immanuel <immi.schein@gmail.com>"]
readme = "README.md"
packages = [{include = "spider", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
click = "^8.1.7"
adafruit-circuitpython-servokit = "^1.3.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_code = "spider.controller:cmd_group"